tests/good/lexical/019-string-1.clap
val s = "How cool is that string?"

