tests/bad/syntax/019-string-1.clap
val s = "How bad is that string?
